# enGinger

./: .gitignore  CMakeLists.txt  TODO.md  config.json
include/: check-condition.tpp  check-not-null.tpp  filesystem-utils.hpp  glfw-utils.hpp  renderer.hpp  shader-program.hpp
include/geometry/: vertex-utils.hpp
resources/shaders/: fragmentShader.glsl  vertexShader.glsl
src/: Path.cpp  ShaderProgram.cpp  TODO.md  Utils.cpp  config-data.cpp  config.json  configData.cpp  filesystem-utils.cpp  glfw-utils.cpp  glfwUtils.cpp  main.cpp  path.cpp  renderer.cpp  shader-program.cpp
src/include/: Dependencies.h  Path.h  ShaderProgram.h  TODO.txt  Utils.h  config-data.hpp  configData.cpp  glfw-utils.hpp  glfwUtils.h  path.hpp  renderer.h  renderer.hpp  shader-program.hpp
src/include/geometry/: point.h  point.hpp  vertex-utils.hpp  vertex-utils.md
src/include/glad/: egl.h
src/lib/: glfw3.lib
src/resources/shaders/: fragmentShaderYellow.glsl
